actualize HttpClient